Them AuctionManagerTest